--- a/harrystyles.css
+++ b/harrystyles.css
@@ -70,7 +70,7 @@
     font-weight: bold; 
     text-decoration: underline; 
     font-size: 1.5em; 
-    background-color: lavender;  
+    background-color: #9ee2bfff;  
   }
   
   .show-type {
