Importing website design

--- a/harrystyles.css
+++ b/harrystyles.css
@@ -1,88 +1,166 @@
-@media only screen and (max-width: 300px) {
-    #main-doc{
-      position: absolute;
-      margin: 0;
-    }
-  }
-  
+@media (prefers-reduced-motion: no-preference){
   * {
-    box-sizing: border-box; 
+  scroll-behavior: smooth;
   }
-  
-  /* THIS IS FOR THE NAVBAR */
-  
-  .bar-container {
-    height: 100%;
-    width: 170px; 
-    border-right: 3px solid green;
-    position: fixed;
-    top: 0;
-    left: 0;
-  }
-  
-  nav header {
-    font-size: 2rem; 
-    border-bottom: 5px double black; 
-    text-align: center; 
-    position: fixed; 
-    top: 0; 
-    padding: 0 7px; 
-    margin: auto; 
-  }
-  
-  
-  #navbar ul {
-    list-style: none; 
-    padding-top: 50px; 
-    padding-left: 0;
-    margin: 0; 
-    font-size: 1.2em; 
-    text-align: right; 
-  }
-  
-  #navbar ul li {
-    padding: 10px 5px 10px 0; 
-    border-bottom: 5px solid black; 
-  }
-  
-  li > a {
-    font-weight: bold; 
-    text-decoration: none;
-    color: black; 
-  }
-  
-  li > a:hover {
-    text-decoration: none;
-    color: purple; 
-  }
-  
-  /* THIS IS FOR THE ACTUAL INFO BODY */
-  
-  section {
-    height: 100%;
-    width: calc(100% - 170px);
-    position: relative;
-    top: 0; 
-    left: 170px; 
-  }
-  
-  .main-section header {
-    font-weight: bold; 
-    text-decoration: underline; 
-    font-size: 1.5em; 
-    background-color: #9ee2bfff;  
-  }
-  
-  .show-type {
-    font-weight: bold; 
-    font-size: 1.1em; 
-    margin-bottom: 2px;
-    margin-top: 5px;  
-  }
-  
-  .where-when {
-    color: darkslategray; 
-    margin-top: 0px; 
-  }
-  
-  
+}
+
+/* Green color: #9ee2bfff */
+/* Light green: #e0f2e9ff */
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background: whitesmoke;
+  color: black;
+  font-family: Rubik;
+  margin: 0;
+}
+
+header, footer {
+  width: 100%;
+  height: 50px;
+  background-color: #9ee2bfff;
+  display: flex;
+  align-items: center;
+  z-index: 999; 
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  justify-content: space-between;
+}
+
+.logo {
+  text-decoration: none;
+  color: black; 
+  padding-left: 5px;
+  padding-top: 10px;
+}
+
+.logohead {
+  font-size: 20px; 
+  padding-top: 5px; 
+  padding-bottom: 0; 
+  margin-bottom: 0; 
+}
+
+.logosub {
+  margin-top: 0; 
+  padding-top: 0; 
+  font-size: 1em; 
+}
+
+
+a[class~="logo"]:hover {
+  color: whitesmoke; 
+}
+
+
+h1 {
+  font-size: min(5vw, 1.2em);
+  text-align: center;
+}
+
+
+
+nav {
+  justify-content: right;
+}
+
+nav > ul {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 0 10px; 
+  height: 100%;
+}
+
+nav > ul > li {
+  color: black;
+  margin: 0 0.2rem;
+  padding: 0.2rem;
+  display: block;
+}
+
+nav > ul > li > a:hover, footer a:hover {
+  border-bottom: 3px double black; 
+  font-weight: bold;
+  padding: 4px; 
+  color: #1b1b32;
+  cursor: pointer;
+}
+
+li > a {
+  color: inherit;
+  text-decoration: none;
+}
+
+/* Main Section Stuff */
+
+main {
+  padding-top: 50px;
+}
+
+section {
+  width: 80%;
+  margin: 0 auto 10px auto;
+  max-width: 600px;
+}
+
+
+#homepage {
+  display: flex; 
+  flex-wrap: wrap; 
+  justify-content: left;
+}
+
+#pfp {
+  width: 200px; 
+  height: auto; 
+  margin: 5px; 
+  border-radius: 20px;   
+  display: flex; 
+  flex-wrap: wrap; 
+  position: relative;
+  top: 70px; 
+}
+
+#bio {
+  margin: 5px; 
+  display: flex; 
+  flex-wrap: wrap; 
+}
+
+
+
+
+/* Footer stuff */ 
+
+
+
+footer,
+footer a {
+  color: black;
+  text-align: center;
+  padding: 0.3em;
+  justify-content: center; 
+  text-decoration: none; 
+}
+
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
