--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ section {
   border-radius: 20px;   
   display: flex; 
   flex-wrap: wrap; 
-  position: relative;
+  position: absolute;
   top: 70px; 
 }
 
@@ -134,6 +134,9 @@ section {
   margin: 5px; 
   display: flex; 
   flex-wrap: wrap; 
+  position: relative;
+  top: 70px; 
+  left: 250px;
 }
 
 
