--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 
 header, footer {
   width: 100%;
-  height: 50px;
+  height: 70px;
   background-color: #9ee2bfff;
   display: flex;
   align-items: center;
@@ -45,12 +45,12 @@ header {
   font-size: 20px; 
   padding-top: 5px; 
   padding-bottom: 0; 
-  margin-bottom: 0; 
+  margin: 0; 
 }
 
 .logosub {
-  margin-top: 0; 
-  padding-top: 0; 
+  margin: 0; 
+  padding: 0; 
   font-size: 1em; 
 }
 
@@ -127,15 +127,16 @@ section {
   display: flex; 
   flex-wrap: wrap; 
   position: absolute;
-  top: 70px; 
+  top: 90px; 
 }
 
 #bio {
   margin: 5px; 
+  width: calc(100% - 300px);
   display: flex; 
   flex-wrap: wrap; 
   position: relative;
-  top: 70px; 
+  top: 90px; 
   left: 250px;
 }
 
