--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,7 @@ body {
 }
 
 header, footer {
-  width: 100%;
-  height: 70px;
+  width: 100%; 
   background-color: #9ee2bfff;
   display: flex;
   align-items: center;
@@ -27,16 +26,22 @@ header, footer {
 }
 
 header {
+  height: 70px;
   position: fixed;
   top: 0;
   left: 0;
   justify-content: space-between;
+  border-bottom: 5px double black; 
+}
+
+footer {
+  height: 100px; 
 }
 
 .logo {
   text-decoration: none;
   color: black; 
-  margin: 0 0 0 15px; 
+  margin: 0 0 0 25px; 
   text-align: center; 
   justify-content: center; 
 }
@@ -44,6 +49,11 @@ header {
 .logo h1, h2 {
   padding: 0; 
   margin: 0; 
+}
+
+.logo h2 {
+  font-size: 1em; 
+  font-weight: lighter;
 }
 
 
@@ -58,55 +68,43 @@ a[class~="logo"]:hover {
 }
 */
 
-
-nav {
-  justify-content: right;
-}
-
-nav > ul {
+nav > ul, footer {
   display: flex;
   justify-content: space-evenly;
+  list-style: none; 
+  
   flex-wrap: wrap;
   align-items: center;
   margin: 0 10px; 
   height: 100%;
 }
 
-nav > ul > li {
+a[class~="navigate"] {
   color: black;
+  text-decoration: none; 
   margin: 0 0.2rem;
   padding: 0.2rem;
-  display: block;
 }
 
-nav > ul > li > a:hover, footer a:hover {
+a[class~="navigate"]:hover {
   border-bottom: 3px double black; 
   font-weight: bold;
   padding: 4px; 
   color: #1b1b32;
   cursor: pointer;
-}
-
-li > a {
   color: inherit;
   text-decoration: none;
 }
 
-/* Main Section Stuff */
 
 
 
-main {
-  padding-top: 50px;
-}
 
-section {
-  width: 80%;
-  margin: 0;
-  max-width: 600px;
 
-}
 
+
+
+/* Home Page Stuff */
 
 #homepage {
   display: flex; 
@@ -120,37 +118,39 @@ section {
   margin: 5px; 
   border-radius: 20px;   
   display: flex; 
-  flex-wrap: wrap; 
   position: absolute;
   top: 90px; 
 }
 
 #bio {
   margin: 5px; 
-  width: 100%;
+  width: calc(100vw - 300px);
   display: flex; 
   flex-wrap: wrap; 
   position: relative;
-  top: 90px; 
-  left: 250px;
+  top: 100px;  
 }
 
+/* PRODUCTION STUFF */
+.all-productions {
+  position: absolute; 
+  display: flex; 
+}
 
+/* PROJECTS STUFF */
 
+/* RESUME STUFF */
 
-/* Footer stuff */ 
+/* FOOTER STUFF */ 
 
-
-
-footer,
-footer a {
+/*footer, footer a {
   color: black;
   text-align: center;
   padding: 0.3em;
   justify-content: center; 
   text-decoration: none; 
 }
-
+*/
 
 .sr-only {
   position: absolute;
