Added Contact Form, Small other updates
Correct favicon name
Update favicon look
Fix footer issue (full screen now)
Can see all the text on productions now
Simplified contact form

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ footer {
   border-top: 5px double black; 
   position: fixed; 
   bottom: 0; 
-
+  left: 0; 
 }
 
 .logo {
@@ -84,6 +84,7 @@ nav > ul {
   align-items: center;
   margin: 0 10px; 
   height: 100%;
+  gap: 30px; 
 }
 
 a[class~="navigate"] {
@@ -94,13 +95,13 @@ a[class~="navigate"] {
 }
 
 a[class~="navigate"]:hover {
-  border-bottom: 3px double black; 
+  border-bottom: 5px double black; 
   font-weight: bold;
-  padding: 4px; 
-  color: #1b1b32;
   cursor: pointer;
   color: inherit;
   text-decoration: none;
+  margin: 0; 
+  padding: 0; 
 }
 
 section {
@@ -132,6 +133,8 @@ section {
   flex-wrap: wrap; 
 }
 
+
+
 /* PRODUCTION STUFF */
 
 .gallery {
@@ -161,28 +164,42 @@ section {
 
 .about-show{
   display: flex; 
-  justify-content: flex-start;
+  justify-content: space-evenly;
+  margin-bottom: 100px; 
+  gap: 26px; 
+
 }
 
-.creative-team {
-  height: 100%; 
-  width: 50%; 
+.empty-block {
+  height: 20px; 
 }
 
 .team-position {
   font-weight: bold;
 }
 
-
-
-
-
-
 /* PROJECTS STUFF */
+
+
 
 /* RESUME STUFF */
 
-/* FOOTER STUFF */ 
+
+
+/* CONTACT FORM STUFF */
+
+#survey-form label, #survey-form button {
+  display: block;
+  margin: 10px auto 0 auto; 
+}
+
+
+.form-star {
+  color: red; 
+}
+
+
+/* SCREEN READER STUFF */
 
 .sr-only {
   position: absolute;
