--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,11 @@ body {
   box-sizing: border-box;
 }
 
+:root {
+  --banner-color: #9ee2bfff; 
+  --lighter-color: #e0f2e9ff; 
+}
+
 body {
   background: whitesmoke;
   color: black;
@@ -80,7 +85,7 @@ body {
 
 header, footer {
   width: 100%; 
-  background-color: #9ee2bfff;
+  background-color: var(--banner-color);
   display: flex;
   align-items: center;
   z-index: 999; 
@@ -210,9 +215,11 @@ section {
 }
 
 .gallery img {
-  width: 100%;
+  /*width: 100%;
   max-width: 350px;
-  height: 300px;
+  height: 300px;*/
+  width: 30vw; 
+  
   object-fit: cover;
   border-radius: 10px;
 }
@@ -222,11 +229,12 @@ section {
   width: 350px;
 }
 
+
+
 .about-show{
   display: flex; 
   justify-content: space-evenly;
   gap: 26px; 
-
 }
 
 .empty-block {
@@ -239,6 +247,68 @@ section {
 
 /* PROJECTS STUFF */
 
+.headliner {
+  font-size: 3em; 
+  background-color: var(--lighter-color); 
+  width: 100%; 
+  display: flex; 
+  position: relative; 
+  text-align: center; 
+  left: 0; 
+  border-bottom: 5px double black; 
+  padding: 3px; 
+}
+
+
+.grid-total {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 20px 10px;
+}
+
+.grid-packet {
+  position: relative;
+  width: 45vw;
+}
+
+.grid-img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  height: 1.5em;
+  width: 100%;
+  opacity: 0;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  /* transition: .5s ease; */
+  background-color: black;
+}
+
+.grid-packet:hover .overlay {
+  opacity: 0.8;
+}
+
+.grid-text {
+  color: white;
+  font-size: 20px;
+}
+
+.grid-total::after {
+  content: "";
+  width: 45vw;
+}
 
 
 /* RESUME STUFF */
