--- a/styles.css
+++ b/styles.css
@@ -72,8 +72,8 @@ body {
 
 :root {
   --dark-green: #9ee2bf; 
-  --mid-green: #c6eedbff;
-  --light-green: #e0f2e9ff; 
+  --mid-green: #bfecd3;
+  --light-green: #dff6e9; 
   --dark-comp: #E2A69E; 
 }
 
@@ -220,10 +220,10 @@ section {
 }
 
 .gallery img {
-  width: 100%;
+  width: 30vw;
   max-width: 350px;
   height: 300px;
-  /*width: 30vw; */
+  /* max-width: 350px; */
   object-fit: cover;
   border-radius: 10px;
 }
@@ -254,9 +254,8 @@ section {
 /* PROJECTS STUFF */
 
 .headliner {
-  font-size: 2.5em;
-  --head-height: 3em;  
   background-color: var(--mid-green); 
+  font-size: 1.6rem;
   width: 100%; 
   display: flex; 
   left: 0;  
@@ -269,15 +268,18 @@ section {
 
 .all-projects h3 { 
   background-color: var(--light-green); 
+  font-size: 1.3rem; 
   width: 100%; 
   display: flex; 
   left: 0;  
   border-bottom: 2px solid black; 
-  padding: 0 25px 0 25px; 
+  padding: 2px 25px; 
   position: sticky; 
-  top: 127px; 
+  top: calc(80px + 1.4rem); 
   z-index: 990; 
+  margin-top: 0; 
 }
+
 
 .all-projects p {
   margin: 5px 40px; 
