--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ nav, footer {
   width: 100%; 
   background-color: var(--dark-green);
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   z-index: 999; 
 }
@@ -101,7 +102,6 @@ nav, footer {
   left: 0;
   border-bottom: 5px double black; 
   width: 100%; 
-  flex-wrap: wrap;
   font-size: min(3vw, 1em); 
   gap: 2em; 
 }
@@ -210,19 +210,57 @@ section {
 
 /* HOME PAGE STUFF */
 
-#pfp {
-  width: max(30vw, 250px); 
-  height: auto; 
-  margin: 5px; 
-  border-radius: 20px;   
+.andy-container {
   display: flex; 
+  flex-wrap: wrap; 
+  gap: 20px; 
+  width: 100%; 
+  justify-content: center;
+  align-items: center;
+  padding-right: 10%; 
+  /* display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 30px;
+    padding-right: 10%;
+    */
+}
+
+#pfp {
+  /*height: auto; 
+  border-radius: 20px;  
+  border: 5px solid blue;  
+  width: min(80vw, 400px); 
+  position: relative; 
+  left: 0; 
+  */
+    width: 40%;
+    min-width: 300px;
+    max-width: 400px;
+    border-radius: 20px;  
+  /*
+   width: 40%;
+    min-width: 300px;
+    max-width: 400px;
+    */
 }
 
 #bio {
-  margin: 15px; 
-  width: max(60%, 100px);
-  display: flex; 
-  flex-wrap: wrap; 
+  margin: 15px;
+  width: 50%;
+    min-width: 300px;
+    max-width: 700px; 
+  /*width: max(calc(90% - 550px), 40px);
+  border: 5px solid green; 
+  float: left; 
+  */
+  /*  font-family: "Molengo", serif;
+    font-size: 1.2rem;
+    color: var(--offwhite);
+    line-height: 1;
+    margin: 20px;
+    */
 }
 
 
