--- a/styles.css
+++ b/styles.css
@@ -20,15 +20,15 @@ body {
 /* Styles for smaller screens */
 @media screen and (max-width: 768px) {
   .andy-container {
-      flex-direction: column;
-      align-items: center;
-      padding: 30px;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
   }
 }
 
 
-
-/* Styles for larger screens */
+/*
+/* Styles for larger screens 
 @media screen and (min-width: 768px) {
   body {
     font-size: 18px;
@@ -41,13 +41,13 @@ body {
   }
 }
 
-/* Styles for desktops */
+/* Styles for desktops 
 @media screen and (min-width: 1024px) {
   .container {
     width: 960px;
   }
 }
-
+*/
 /* Green color: #9ee2bfff */
 /* Light green: #e0f2e9ff */
 
@@ -133,7 +133,8 @@ footer a:hover {
 footer {
   height: 40px;
   position: fixed;
-  bottom: 0;
+  top: calc(100vh - 40px);
+  /* bottom: 0; */
   left: 0;
   border-top: 5px double black;
   width: 100%;
@@ -195,6 +196,7 @@ section {
   top: 70px;
   left: 0;
   padding-bottom: 45px;
+  width: 100%; 
 }
 
 /* HOME PAGE STUFF */
@@ -205,7 +207,7 @@ section {
   align-items: center;
   gap: 20px;
   width: 100%;
-  padding: 30px; 
+  padding: 30px;
   padding-right: 10%;
   /* display: flex;
     justify-content: center;
@@ -289,6 +291,7 @@ section {
   justify-content: center;
   align-items: center;
   width: 100%;
+  gap: 5px; 
   /* max-width: 1400px; */
   margin: 0 auto;
   padding: 20px 10px;
@@ -296,12 +299,10 @@ section {
 
 .production-gallery img {
   aspect-ratio: 3 / 2;
-  width: 31vw; 
-  height: auto; 
+  width: 31vw;
+  height: auto;
   object-fit: cover;
-  min-width: 300px; 
-
-  object-fit: cover;
+  min-width: 300px;
 }
 
 
@@ -309,7 +310,6 @@ section {
   display: flex;
   justify-content: space-evenly;
   margin: 0 auto;
-
 }
 
 .empty-block {
@@ -338,7 +338,7 @@ section {
 }
 
 .all-projects p {
-  margin: 5px 40px;
+  padding: 5px 40px;
 }
 
 .all-projects h3 {
@@ -351,6 +351,7 @@ section {
   top: calc(80px + 1.4rem);
   z-index: 990;
   margin-top: 0;
+  width: 100%; 
 }
 
 
@@ -367,8 +368,16 @@ section {
 }
 
 .grid-packet {
+  width: 31vw;
+  height: auto;
+  object-fit: cover;
+  min-width: 300px;
   position: relative;
+  /*
+  border: 3px solid red; 
   width: max(30vw, 300px);
+  */
+  
 }
 
 
@@ -376,6 +385,7 @@ section {
   display: block;
   width: 100%;
   height: auto;
+  /*border: 3px solid blue; */
 }
 
 .overlay {
@@ -387,6 +397,7 @@ section {
   text-align: center;
   justify-content: center;
   align-items: center;
+  border: 3px solid green; 
   /* transition: .5s ease; */
   background-color: black;
 }
@@ -409,6 +420,7 @@ section {
   border-radius: 10px;
   width: 80%;
   height: auto;
+  min-width: 300px; 
   position: static;
   margin-left: 10%;
   margin-bottom: 1em;
@@ -416,15 +428,133 @@ section {
   padding: 0 auto;
 }
 
+.suit-gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  width: 100%;
+  /* max-width: 1400px; */
+  margin: 0 auto;
+  padding: 20px 10px;
+}
+
+.suit-gallery img {
+  aspect-ratio: 2 / 3;
+  height: 60vh;
+  width: auto;
+  object-fit: cover;
+  min-width: 300px;
+  border-radius: 10px;
+}
+
+.suit-gallery::after {
+  content: "";
+  width: 300px;
+}
+
+.final {
+  border-radius: 10px;
+  width: 100%;
+}
+
+
+.all-pics {
+  width: 100%; 
+  display: flex; 
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  /*border: 4px solid brown;*/
+  gap: 10px; 
+  margin: 0 auto;
+  padding: 20px 10px;
+}
+
+.pic-box {
+  display: flex; 
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 40vw; 
+  min-width: 300px;
+  gap: 5px; 
+  /*border: 3px solid blue;*/
+}
+
+.big-pic {
+  /*border: 3px solid red; */
+  width: 40vw;
+  min-width: 300px;
+  max-width: 400px;
+  height: auto;
+  object-fit: contain;
+  justify-content: flex-start;
+}
+
+.small-pic {
+  aspect-ratio: 3 / 4;
+  width: 30%; 
+  min-width: 200px; 
+  max-width: 250px;
+}
+
+/* Styles for smaller screens */
+@media screen and (max-width: 768px) {
+  .small-pic {
+    min-width: 300px;
+  }
+}
 
 
 
 /* RESUME STUFF */
+.resume-all {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
 
-.resume-view {
-  width: 100%;
-  height: 600px;
-  overflow: auto;
+
+.resume {
+  width: 80%; 
+  height: auto; 
+  margin: 0 auto; 
+}
+
+.resume-download {
+  
+  
+  display: block; 
+  text-align: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 10px; 
+}
+
+.resume-download a {
+  color: black; 
+  text-decoration: none;
+  text-align: center;
+  background-color: var(--dark-green);
+  padding: 20px; 
+  margin: 0 auto; 
+  position: relative; 
+  bottom: 20px; 
+}
+
+
+.resume-download a:hover {
+  color: black; 
+  text-decoration: none;
+  text-align: center;
+  background-color: var(--mid-green);
 }
 
 
@@ -456,3 +586,7 @@ section {
   white-space: nowrap;
   border: 0;
 }
+
+
+
+
