--- a/harrystyles.css
+++ b/harrystyles.css
@@ -84,6 +84,10 @@
     width: 100%; 
     border: 3px solid pink; 
   }
+
+  .all-projects > div {
+    width: 100%; 
+  }
   
   
   /* PROJECTS STUFF */
@@ -141,41 +145,13 @@
   
   
   
-  
-  
-  .all-pics {
+  .side-by-side {
     width: 100%; 
-    display: flex; 
+    display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    border: 4px solid brown;
-    gap: 10px; 
-    /*margin: 0 auto;*/
-    padding: 20px 10px;
-  }
-  
-  .pic-box {
-    display: flex; 
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 40vw; 
-    min-width: 300px;
-    gap: 5px; 
-    border: 3px solid yellow;
-  }
-  
-  .big-pic {
-    border: 3px solid red; 
-    width: 40vw;
-    min-width: 300px;
-    max-width: 400px;
-    height: auto;
-    object-fit: contain;
-    justify-content: flex-start;
+    padding: 5px; 
+    justify-content: space-around;
+    border: 3px solid saddlebrown; 
   }
   
   .small-pic {
