--- a/harrystyles.css
+++ b/harrystyles.css
@@ -150,6 +150,7 @@
     display: flex;
     flex-wrap: wrap;
     padding: 5px; 
+    gap: 5px; 
     justify-content: space-around;
     border: 3px solid saddlebrown; 
   }
