--- a/styles.css
+++ b/styles.css
@@ -222,48 +222,11 @@ section {
   margin: 15px;
   width: 55%;
   min-width: 300px;
-  /*width: max(calc(90% - 550px), 40px);
-  border: 5px solid green; 
-  float: left; 
-  */
-  /*  font-family: "Molengo", serif;
-    font-size: 1.2rem;
-    color: var(--offwhite);
-    line-height: 1;
-    margin: 20px;
-    */
 }
 
 
 
 /* PRODUCTION STUFF */
-
-.gallery {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  width: 100%;
-  /* max-width: 1400px; */
-  margin: 0 auto;
-  padding: 20px 10px;
-}
-
-.gallery img {
-  width: 30vw;
-  max-width: 350px;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-
-
-.gallery::after {
-  content: "";
-  width: 350px;
-}
 
 .production-gallery {
   display: flex;
@@ -286,11 +249,13 @@ section {
   min-width: 300px;
 }
 
-
 .about-show {
   display: flex;
+  flex-wrap: wrap; 
+  
   justify-content: space-evenly;
   margin: 0 auto;
+  padding: 0 10px; 
 }
 
 .empty-block {
@@ -476,6 +441,13 @@ section {
   .small-pic {
     min-width: 300px;
   }
+  .about-show {
+    flex-direction: column-reverse;
+  }
+  .empty-block {
+    display: none;
+  }
+  
 }
 
 
