--- a/harrystyles.css
+++ b/harrystyles.css
@@ -84,31 +84,63 @@
     border: 3px solid pink; 
   }
   
+/* --------------------------------------------------------------------------------------- */
 
+/* Resume Stuff */
 
-.headliner {
-  background-color: var(--mid-green);
-  width: 100%;
+.resume-all {
   display: flex;
-  flex-direction: row;
-  gap: 20px;
-  border-bottom: 5px double black;
-  padding: 0 10px;
-  position: sticky;
-  top: 70px;
-  z-index: 995;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%; 
 }
 
-.headliner h2 {
-  font-size: 1.6rem;
-  margin: 0; 
+
+.resume {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 80%; 
+  padding-top: 15px; 
+  height: auto; 
+  margin: 0 auto; 
+  
 }
 
-.headliner p {
-  align-items: end;
-  padding: 0; 
-  font-size: 1rem; 
-  margin: auto 0 2px; 
+.download-buttons {
+  display: flex; 
+  text-align: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%; 
+  gap: 20px; 
+  margin-top: 10px;
+  border: 2px solid red; 
+}
+
+
+.download-buttons a {
+  color: black; 
+  text-decoration: none;
+  text-align: center;
+  background-color: var(--dark-green);
+  font-size: min(3vw, 1em);
+  padding: 1.2em; 
+  margin: 0 auto; 
+  border: 2px solid green; 
+}
+
+
+.download-buttons a:hover {
+  color: black; 
+  text-decoration: none;
+  text-align: center;
+  background-color: var(--mid-green);
 }
 
 
